# Parlor_Vision

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  WEEKLY_PLAN.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: index.html  pyproject.toml  server.py  tts.py
src/benchmarks/: bench.py  benchmark_tts.py
